testdata/baselines/reference/submodule/conformance/jsDeclarationsTypedefAndLatebound.errors.txt
LazySet.js(13,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
LazySet.js(13,1): error TS2309: An export assignment cannot be used in a module with other exported elements.


==== index.js (0 errors) ====
    const LazySet = require("./LazySet");
    
    /** @type {LazySet} */
    const stringSet = undefined;
    stringSet.addAll(stringSet);
    
    
==== LazySet.js (2 errors) ====
    // Comment out this JSDoc, and note that the errors index.js go away.
    /**
     * @typedef {Object} SomeObject
     */
    class LazySet {
        /**
         * @param {LazySet} iterable
         */
        addAll(iterable) {}
        [Symbol.iterator]() {}
    }
    
    module.exports = LazySet;
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    